syntax = "proto3";

package proto;

message Empty {
}

message Request {
    string type = 1;
    string payload = 2;
}

message Response {
    string payload = 1;
}

message Item {
    string key = 1;
    bytes value = 2;
}

message SynchronizeRequest {
    int64 Index = 1;
}

message SynchronizeResponse {
    repeated Item Items = 1;
}

service DAPoSGrpc {
    rpc SynchronizeGrpc(SynchronizeRequest) returns (SynchronizeResponse) {}
    rpc GossipGrpc(Request) returns (Response) {}
}
